# RandomPicker

./: CMakeLists.txt  TODO.md  main.cpp
Resources/Models/: Slot1.glb
src/: Dice.cpp  Dice.h  MenuScreen.cpp  MenuScreen.h  NumberPicker.cpp  NumberPicker.h  Resources.h  SlotMachine.cpp  SlotMachine.h  Wheel.cpp  Wheel.h  random.h  screen.h
